Fix: Fix z-index following Moai

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -6,7 +6,19 @@ body,
 }
 
 :root:not(.x) {
-	--highlight-0: #f5f3ff;
+	/* Gray */
+	/* --highlight-1: var(--gray-1);
+	--highlight-2: var(--gray-2);
+	--highlight-3: var(--gray-3);
+	--highlight-4: var(--gray-4);
+	--highlight-5: var(--gray-5);
+	--highlight-6: var(--gray-6);
+	--highlight-7: var(--gray-7);
+	--highlight-8: var(--gray-8);
+	--highlight-9: var(--gray-9); */
+
+	/* Purple */
+	/* --highlight-0: #f5f3ff;
 	--highlight-1: #ede9fe;
 	--highlight-2: #ddd6fe;
 	--highlight-3: #c4b5fd;
@@ -15,9 +27,10 @@ body,
 	--highlight-6: #7c3aed;
 	--highlight-7: #6d28d9;
 	--highlight-8: #5b21b6;
-	--highlight-9: #4c1d95;
+	--highlight-9: #4c1d95; */
 
-	/* --highlight-0: #eef2ff;
+	/* Indigo */
+	--highlight-0: #eef2ff;
 	--highlight-1: #e0e7ff;
 	--highlight-2: #c7d2fe;
 	--highlight-3: #a5b4fc;
@@ -26,5 +39,11 @@ body,
 	--highlight-6: #4f46e5;
 	--highlight-7: #4338ca;
 	--highlight-8: #3730a3;
-	--highlight-9: #312e81; */
+	--highlight-9: #312e81;
+
+	/* Need to win z-index from CodeMirror (6) */
+	--z-sticky-1: 7;
+	--z-sticky-2: 8;
+	--z-overlay-base: 9;
+	--z-overlay-top: 10;
 }
